--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -35,7 +35,11 @@
   </ul>
 </div>
 --->
-
+<footer>
+  <div class="footer">
+    {% include 'footer.md' %}
+  </div>
+</footer>
 <!---
           <div class="footer">
             <div class="contact">
