--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -12,6 +12,8 @@
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/main.css">
 
+<script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+
    </head>
 
 
@@ -35,6 +37,19 @@
  
 
         </div>
+
+
+<script>
+  if (window.netlifyIdentity) {
+    window.netlifyIdentity.on("init", user => {
+      if (!user) {
+        window.netlifyIdentity.on("login", () => {
+          document.location.href = "/admin/";
+        });
+      }
+    });
+  }
+</script>
 
     </body>
 </html>
