--- a/src/_includes/post.njk
+++ b/src/_includes/post.njk
@@ -11,6 +11,8 @@
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/main.css">
 
+<script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+
    </head>
 
 
