--- a/src/_includes/postlist.njk
+++ b/src/_includes/postlist.njk
@@ -1,5 +1,5 @@
 <ul class="posts">
-  {% for post in collections.blog %}
+  {% for post in collections.post %}
     <li>
       <span>{{ post.date | formatDate }}</span> &raquo;
       <a href="{{ post.url }}">{{ post.data.title }}</a>
