--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -1,3 +1,4 @@
- <h1 class="title"><a href="/"><img src="/images/logo.png" height="14px"> vcnt's corner </a></h1>
+<a href="/"> <img src="/images/banner.png" height="40"> </a>
             <a class="extra" href="/">home</a>
             <a class="extra" href="/contact">contact</a>
+<br><br>
