--- a/src/_includes/post.njk
+++ b/src/_includes/post.njk
@@ -3,6 +3,13 @@
     <head>
         <meta charset="utf-8">
         <title>{{ title }}</title>
+
+            <meta property="og:title" content="{{ title }}">
+    <meta property="og:description" content="{{ description }}">
+    <meta property="og:image" content="{{ previewImage }}">
+    <meta property="og:url" content="{{ postUrl }}">
+
+    
         <meta name="viewport" content="width=device-width">
  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
         <!-- syntax highlighting CSS -->
