--- a/src/_includes/post.njk
+++ b/src/_includes/post.njk
@@ -4,10 +4,10 @@
         <meta charset="utf-8">
         <title>{{ title }}</title>
 
-            <meta property="og:title" content="{{ title }}">
-    <meta property="og:description" content="{{ description }}">
-    <meta property="og:image" content="{{ previewImage }}">
-    <meta property="og:url" content="{{ postUrl }}">
+   <meta property="og:title" content="{{ title }}">
+<meta property="og:description" content="{{ description }}">
+<meta property="og:image" content="{{ previewImage }}">
+<meta property="og:url" content="{{ baseUrl }}{{ postUrl }}">
 
     
         <meta name="viewport" content="width=device-width">
