--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -1,4 +1,5 @@
 <a href="/"> <img src="/images/banner.png" height="40"> </a>
             <a class="extra" href="/">home</a>
             <a class="extra" href="/contact">contact</a>
+            <a class="extra" href="/admin">admin</a>
 <br><br>
