Changed from Decap CMS to Staticcms

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -11,9 +11,7 @@
  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/main.css">
-
 <script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-
    </head>
 
 
@@ -41,10 +39,10 @@
 
 <script>
   if (window.netlifyIdentity) {
-    window.netlifyIdentity.on("init", user => {
+    window.netlifyIdentity.on('init', user => {
       if (!user) {
-        window.netlifyIdentity.on("login", () => {
-          document.location.href = "/admin/";
+        window.netlifyIdentity.on('login', () => {
+          document.location.href = '/admin/';
         });
       }
     });
